Theme / Reponsive Stuff

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -5,9 +5,18 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://kit.fontawesome.com/a9a7855132.js" crossorigin="anonymous"></script>
+
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
+
 		%sveltekit.head%
 	</head>
-	<body class="bg-white dark:bg-black">
+	<body class="bg-white dark:bg-black transition-all duration-300">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
