fix: Api Service / Formatting

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -16,7 +16,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body class="bg-white dark:bg-black transition-all duration-300">
+	<body class="bg-white transition-all duration-300 dark:bg-black">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
